--- a/ZhouZhenWuAllDemoApplication/app/src/main/AndroidManifest.xml
+++ b/ZhouZhenWuAllDemoApplication/app/src/main/AndroidManifest.xml
@@ -400,7 +400,13 @@
 
         <!-- 设计模式学习Activity -->
         <activity
-            android:name=".designpattern.activity.DesignPatternActivityActivity"
+            android:name=".designpattern.DesignPatternActivityActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".designpattern.activity.DesignPatternCommendActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
