AIDL跨进程通信测试代码提交

--- a/ZhouZhenWuAllDemoApplication/app/src/main/AndroidManifest.xml
+++ b/ZhouZhenWuAllDemoApplication/app/src/main/AndroidManifest.xml
@@ -328,6 +328,13 @@
             android:theme="@style/AppTheme.NoActionBar" />
 
         <activity
+            android:name=".android.activity.AIDLTestActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
             android:name=".android.activity.AirbnbLottieAnimationTestActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
