--- a/ZhouZhenWuAllDemoApplication/android_common.gradle
+++ b/ZhouZhenWuAllDemoApplication/android_common.gradle
@@ -3,11 +3,11 @@
 // 那么这个配置文件就可以被使用，否侧会报错说android{xxx}这个方法找不到；
 // 这里的android{xxx}相当于一个基类方法，而使用这个配置项的gradle的项目配置文件中可以重新这个方法（相当于重写父类的方法）
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
+    compileSdkVersion 26
+    buildToolsVersion '29.0.2'
 
     defaultConfig {
-        minSdkVersion rootProject.ext.minSdkVersion
+        minSdkVersion 21
 
         javaCompileOptions {
             annotationProcessorOptions {
