--- a/ZhouZhenWuAllDemoApplication/app/build.gradle
+++ b/ZhouZhenWuAllDemoApplication/app/build.gradle
@@ -190,7 +190,7 @@ dependencies {
     // multitypeRecycleView的引入
     api 'me.drakeet.multitype:multitype:3.0.0'
 
-    annotationProcessor "com.google.dagger:dagger-compiler:2.6"
+//    annotationProcessor "com.google.dagger:dagger-compiler:2.6"
 
     // airbnb的lottie库
     api 'com.airbnb.android:lottie:2.1.0'
